# RAR

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
assets/: rar4-best-4096kb-txt.rar  rar4-fast-4096kb-txt.rar  rar4-fastest-4096kb-txt.rar  rar4-good-4096kb-txt.rar  rar4-normal-4096kb-txt-png-1mb.part1.rar  rar4-normal-4096kb-txt-png-1mb.part2.rar  rar4-normal-4096kb-txt-png-1mb.part3.rar  rar4-normal-4096kb-txt.rar  rar4-save-4096kb-txt.rar  rar5-best-32mb-txt.rar  rar5-fast-32mb-txt.rar  rar5-fastest-32mb-txt.rar  rar5-good-32mb-txt.rar  rar5-normal-1mb-txt-png.rar  rar5-normal-32mb-txt-png-1mb-pw-test.part1.rar  rar5-normal-32mb-txt-png-1mb-pw-test.part2.rar  rar5-normal-32mb-txt-png-1mb-pw-test.part3.rar  rar5-normal-32mb-txt-png-protect.rar  rar5-normal-32mb-txt-png-pw-test.rar  rar5-normal-32mb-txt-png-pwf-test.rar  rar5-normal-32mb-txt-png-recovery.rar  rar5-normal-32mb-txt-png-solid.rar  rar5-normal-32mb-txt-png.rar  rar5-normal-32mb-txt.rar  rar5-save-32mb-txt-png-512kb.part1.rar  rar5-save-32mb-txt-png-512kb.part2.rar  rar5-save-32mb-txt-png-512kb.part3.rar  rar5-save-32mb-txt-png-512kb.part4.rar  rar5-save-32mb-txt-png-512kb.part5.rar  rar5-save-32mb-txt-png-pw-test.rar  rar5-save-32mb-txt-png.rar  rar5-save-32mb-txt.rar  text.txt
src/: aes_reader.rs  archive.rs  archive_block.rs  buffer.rs  decryption_reader.rs  decryptor.rs  encryption.rs  end.rs  end_block.rs  error.rs  extra.rs  extra_block.rs  extractor.rs  file.rs  file_block.rs  file_writer.rs  head_block.rs  header.rs  lib.rs  rar_reader.rs  sig_block.rs  signature.rs  util.rs  vint.rs
