[package]
name = "rar"
version = "0.2.0"
authors = ["Robert Schütte <schuetterobert@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Roba1993/RAR"
homepage = "https://github.com/Roba1993/RAR"
description = """
Rust native RAR extractor based upon nom
"""
exclude = [
    "assets/*",
]

[dependencies]
nom = "4.0.0"
failure = "0.1.1"
lazy_static = "1.1.0"
chrono = "0.4.5"
rust-crypto = "0.2.36"